--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
     "query-to-mongo": "^0.10.2"
   }
 }
