--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "query-to-mongo": "^0.10.2"
   }
 }
